REGRESSION (r87351): toggling display of lots (thousands) of elements with display:none is very slow https://bugs.webkit.org/show_bug.cgi?id=67581

Reviewed by Darin Adler.

Source/WebCore:

Test: perf/show-hide-table-rows.html

* dom/NodeRenderingContext.cpp:
(WebCore::NodeRendererFactory::createRendererAndStyle): Moved style-creating code into createRendererIfNeeded, renamed
    to createRenderer.
(WebCore::NodeRendererFactory::createRendererIfNeeded): Re-arrange code to avoid unnecessary creation of renderers.

LayoutTests:

* perf/show-hide-table-rows-expected.txt: Added.
* perf/show-hide-table-rows.html: Added.


Canonical link: https://commits.webkit.org/83824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94938 268f45cc-cd09-0410-ab3c-d52691b4dbfc